Added -j parameter & more help info for --boost-libs See changelog for more details.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,20 @@
+-- 2017-02-24 --
+* Updated default Boost version to 1.63.0
+* Changed min iOS version to 10.0
+* Changed min tvOS version to 10.0
+* Added a parameter to specify the number of threads to use
+* Changed all 'OSX' variable names to 'macOS'
+* Changed the name of the log when building for iOS from "iphone-build.log" to
+  "ios-build.log"
+* Fixed a couple of badly placed braces in the parameter parsing function.
+  This should have caused the script to crash when those parameters were used.
+  I dunno how or if that ever worked.
+* Added more documentation for the --boost-libs parameter. For some reason I
+  actually bothered to take the time to build each one of these individually
+  and figure out what builds for what. Still a couple things I'm not sure
+  about, but... whatever, it's close enough for now. If you want / need more,
+  ask.
+
 -- 2016-05-18 --
 * Added tvOS support
 * Moved build output to a build directory. All output will now be located at:
