* Updated Boost to 1.67 * Fixed tvOS build (Fixes #20)

--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+-- 2018-07-27 --
+* Updated Boost version to 1.67.0
+* Fixed tvOS build
+
 -- 2018-06-07 --
 * Added a CLI flag to create universal FAT binaries for iOS and tvOS.
 
