--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+-- 2018-08-14 --
+* Fixed I'm stupid and forgot how line contiuations work in Bash...
+
 -- 2018-07-27 --
 * Updated Boost version to 1.67.0
 * Fixed tvOS build
