--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+-- 2018-08-24 --
+* Fixed incorrect ordering of params for tar command
+
 -- 2018-07-27 --
 * Updated Boost version to 1.67.0
 * Fixed tvOS build
