--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+-- 2019-09-20 --
+* Fixed incorrect architecture copying from CUSTOM_MACOS_ARCHS into MACOS_ARCHS (and similar for iOS)
+
 -- 2019-08-14 --
 * Fixed my being stupid, doing bash arrays wrong, and breaking everyone
 
