--- a/changelog
+++ b/changelog
@@ -1,6 +1,10 @@
+-- 2020-04-18 --
+* Updated default boost version to 1.72.0
+* Fixed error "unknown argument: '-fcoalesce-templates'" when building with Xcode 11.4 (#45)
+
 -- 2020-04-08 --
-* Add shellcheck to CI
-* Fix all shellcheck warnings
+* Added shellcheck to CI
+* Fixed all shellcheck warnings
 
 -- 2019-09-20 --
 * Use bintray rather than sourceforge for downloads
